# Calculator

Calculator/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  loader.cpp  loader.h  main.cpp
Calculator/Calculator/plugins/: cos_deg.cpp  ln.cpp  pow.cpp  sin_deg.cpp
